# 4sem-backend-agenda

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0a8e78f2fbe3_add_user_ra_field_to_disciplina_table.py  1b4e1dd2e163_add_disciplina_field_to_docente_table.py  1cab29de0c98_add_disciplina_field_and_change_nota_.py  35d3035a0b16_add_disciplina_to_horario.py  5d2c25fa1361_update_tipo_data_constraints_and_size.py  960eeeb4ebec_add_numero_aula_field_to_horario_table.py  9e3652848aea_make_ra_not_null_in_docente_table.py  c18dff1fdb7d_remove_unique_constraint_from_docente_.py  c575db45f179_add_disciplina_field_to_nota_table.py  d557c338c7f6_remove_disciplina_curso_disciplina_and_.py  e18949de1aa9_add_ra_field_to_discente_table.py  ed6a7532c77c_add_ra_field_to_docente_table.py
app/: auth.py  constants.py  crud.py  enums.py  main.py  models.py  schemas.py
app/routers/: anotacao.py  calendario.py  curso_disciplina.py  discentes.py  disciplina_docente.py  disciplinas.py  docentes.py  health.py  horario.py  notas.py  tipo_data.py  usuario.py
app/utils/: __init__.py  validators.py
backup/: schema.sql
templates/: index.html
tests/: README.md  __init__.py  conftest.py  test_anotacoes.py  test_calendario.py  test_discentes.py  test_docentes.py  test_health.py  test_horarios.py  test_notas.py  test_usuario.py
