[tool.poetry]
name = "agenda-api"
version = "1.0.0"
description = "API REST para gerenciamento de agenda acadêmica"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_no_return = false
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
